# swagger.json
@@ -872,6 +872,33 @@
         }
       }
     },
+    "/places/hall/{hallid}": {
+      "get": {
+        "tags": [
+          "Place"
+        ],
+        "description": "Search places by ID",
+        "parameters": [
+          {
+            "name": "hallid",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/prices": {
       "get": {
         "tags": [
